# one-math-stats

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
one_math_stats/: __init__.py  core.py
tests/: test_one_math_stats.py
